--- a/Hugging-Face-Models/L3_Translation_and_Summarization.ipynb
+++ b/Hugging-Face-Models/L3_Translation_and_Summarization.ipynb
@@ -314,6 +314,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "814f1db2",
+   "metadata": {
+    "height": 81
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'summary_text': 'Paris is the capital and most populous city of France, with an estimated population of 2'}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary = summarizer(text,\n",
+    "                     min_length=10,\n",
+    "                     max_length=20)\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f6a8d3c8",
+   "metadata": {
+    "height": 81
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'summary_text': 'Paris is the capital and most populous'}]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary = summarizer(text,\n",
+    "                     min_length=1,\n",
+    "                     max_length=10)\n",
+    "summary"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca56abc0",
    "metadata": {},
@@ -324,21 +376,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3eec8b5a",
+   "execution_count": 21,
+   "id": "1c1bc929",
    "metadata": {
-    "height": 62
+    "height": 47
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Paris is the capital and most populous city of France, with an estimated population of 2,175,601 residents as of 2018. The City of Paris is the centre and seat of the government of the region and province of Île-de-France.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text = \"\"\"Paris is the capital and most populous city of France, with an estimated population of 2,175,601 residents as of 2018. \n",
-    "The City of Paris is the centre and seat of the government of the region and province of Île-de-France.\"\"\""
+    "text = summary[0][\"summary_text\"]\n",
+    "text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0faee9df",
+   "id": "b2dafb66",
    "metadata": {
     "height": 79
    },
@@ -378,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "af76ee40",
+   "id": "6e89435e",
    "metadata": {
     "height": 98
    },
@@ -404,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f8deca",
+   "id": "85109f26",
    "metadata": {},
    "source": [
     "The second sentence is literally lost in translation :D"
@@ -413,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e80f7f62",
+   "id": "6ecfe7af",
    "metadata": {
     "height": 98
    },
