--- a/Hugging-Face-Models/L4_Sentence_Embeddings.ipynb
+++ b/Hugging-Face-Models/L4_Sentence_Embeddings.ipynb
@@ -54,7 +54,7 @@
    "execution_count": 2,
    "id": "2ed9cec8-803a-4d7e-99d9-c4c84682901c",
    "metadata": {
-    "height": 30
+    "height": 45
    },
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
    "execution_count": 5,
    "id": "c33db645-edd8-4a28-a06f-e0fd8200f27f",
    "metadata": {
-    "height": 30
+    "height": 45
    },
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d418c9c7",
+   "id": "e1327273",
    "metadata": {
     "height": 30
    },
@@ -329,7 +329,7 @@
    "execution_count": 9,
    "id": "c7e0c68f",
    "metadata": {
-    "height": 47
+    "height": 62
    },
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
    "execution_count": 12,
    "id": "39c1f4f3-94ad-4b5e-a40d-c4ba8277815b",
    "metadata": {
-    "height": 30
+    "height": 45
    },
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80b107e4",
+   "id": "5324bfcc",
    "metadata": {},
    "source": [
     "#### Sentences with similar words vs similar meanings"
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c373a435",
+   "id": "1b449611",
    "metadata": {
     "height": 47
    },
@@ -471,9 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c2336fd7",
+   "id": "6a0b5634",
    "metadata": {
-    "height": 64
+    "height": 79
    },
    "outputs": [
     {
@@ -496,9 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fcf2dec0",
+   "id": "360336b0",
    "metadata": {
-    "height": 47
+    "height": 62
    },
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cda9589f",
+   "id": "31ff770d",
    "metadata": {
     "height": 79
    },
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d5bb7cb4",
+   "id": "64af4bca",
    "metadata": {
     "height": 30
    },
@@ -565,9 +565,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "df79fb6b",
+   "id": "83029cea",
    "metadata": {
-    "height": 47
+    "height": 62
    },
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d828324e",
+   "id": "567cdff9",
    "metadata": {},
    "source": [
     "#### Try a different model"
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "eb8fcc55",
+   "id": "5145f031",
    "metadata": {
     "height": 30
    },
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2f1af7e5",
+   "id": "00186066",
    "metadata": {
     "height": 96
    },
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e75b25c6",
+   "id": "1b6a9b91",
    "metadata": {
     "height": 96
    },
@@ -803,6 +803,533 @@
     "cosine_scores = util.cos_sim(embeddings1,embeddings2)\n",
     "print(cosine_scores)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17a34d9a",
+   "metadata": {
+    "height": 30
+   },
+   "source": [
+    "## Other Tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb38526d",
+   "metadata": {},
+   "source": [
+    "### Text Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d2932e22",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline, Conversation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f2630c8c",
+   "metadata": {
+    "height": 79
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "498f12a5f6dc45f9bb2134175948b20d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/629 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48af21c37ff9445e90edf91159648e4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/268M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9d16c57903714b1495cc0708ba273aa8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b2ffec73c00c4bf7827434eea65f629b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "classifier = pipeline(\n",
+    "    \"text-classification\",\n",
+    "    model=\"distilbert-base-uncased-finetuned-sst-2-english\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c169943d",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.9990052580833435}]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I like pandas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c1b1b68d",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9996398687362671}]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I hate it\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c7f05e27",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9974709749221802}]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"I don't know\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "85dfa5bb",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'NEGATIVE', 'score': 0.9996809959411621}]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier(\"Not sure\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93933738",
+   "metadata": {},
+   "source": [
+    "### Zero shot classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b37644dc",
+   "metadata": {
+    "height": 64
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dfe964a22bef46269550a0ac18fbe4ba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcae117c3fa74cd3971bd5e9286398b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/1.63G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8204e0179f024ce691f13789d86fdac2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fd6e933a8b44bd3a51650cf6798fccc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "292f4d26162843a99c19e2748235cced",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c73ab6e96c4b4b14ad2aa04105734420",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "zero_shot_classifier = pipeline(\n",
+    "    \"zero-shot-classification\",\n",
+    "    model=\"facebook/bart-large-mnli\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a597e332",
+   "metadata": {
+    "height": 62
+   },
+   "outputs": [],
+   "source": [
+    "sequence = \"one day I will see the world\"\n",
+    "candidate_labels = [\"travel\", \"cooking\", \"dancing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "f1e26148",
+   "metadata": {
+    "height": 98
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sequence': 'one day I will see the world', 'labels': ['travel', 'dancing', 'cooking'], 'scores': [0.9945111274719238, 0.005706233438104391, 0.0018193295691162348]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "classification = zero_shot_classifier(\n",
+    "    sequence,\n",
+    "    candidate_labels,\n",
+    "    multi_label=True)\n",
+    "print(classification)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cafef04e",
+   "metadata": {
+    "height": 47
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['travel', 'dancing', 'cooking']\n",
+      "[0.9945111274719238, 0.005706233438104391, 0.0018193295691162348]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification[\"labels\"])\n",
+    "print(classification[\"scores\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cd1044a4",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0020366904791445"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(classification[\"scores\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ede0b30",
+   "metadata": {
+    "height": 30
+   },
+   "source": [
+    "### Q/A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "25d57ca9",
+   "metadata": {
+    "height": 79
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98bffc5c79b64a88b0e0547cfc0bbe72",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/473 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4daeb6ae999f4cd8b1b92ca75e6185fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/261M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d1afba4f337b4986821ed703326fb7e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/49.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7a14a8d6f7243bfa2835e230bb86353",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/213k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06f44c8a77874cb08a96034ed566d64e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/436k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "question_answerer = pipeline(\n",
+    "    \"question-answering\",\n",
+    "    model=\"distilbert-base-cased-distilled-squad\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f933a395",
+   "metadata": {
+    "height": 147
+   },
+   "outputs": [],
+   "source": [
+    "context = \"\"\"\n",
+    "Extractive QA is when a model identifies and extracts the exact answer span directly from the given text.\n",
+    "A good example is SQuAD (Stanford Question Answering Dataset), which contains over 100,000 questions based on Wikipedia.\n",
+    "\"\"\"\n",
+    "question = \"\"\"\n",
+    "What is a good example of a question answering dataset?\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c5ca61cf",
+   "metadata": {
+    "height": 64
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'score': 0.9811776876449585, 'start': 125, 'end': 130, 'answer': 'SQuAD'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = question_answerer(question=question,\n",
+    "                          context=context)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58786807",
+   "metadata": {
+    "height": 30
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
