--- a/Hugging-Face-Models/L5_Zero-Shot_Audio_Classification.ipynb
+++ b/Hugging-Face-Models/L5_Zero-Shot_Audio_Classification.ipynb
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "bd2dc67c",
    "metadata": {
     "height": 47
@@ -606,6 +606,7 @@
     }
    ],
    "source": [
+    "# 5 seconds\n",
     "IPythonAudio(audio_sample[\"audio\"][\"array\"],\n",
     "             rate=audio_sample[\"audio\"][\"sampling_rate\"])"
    ]
@@ -702,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "aac00370",
    "metadata": {
     "height": 47
@@ -728,13 +729,15 @@
     }
    ],
    "source": [
+    "# Lower sampling rates generate longer audios\n",
+    "# 15 seconds\n",
     "IPythonAudio(audio_sample[\"audio\"][\"array\"],\n",
     "             rate=16000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2f65b96b",
    "metadata": {
     "height": 47
@@ -760,6 +763,8 @@
     }
    ],
    "source": [
+    "# Higher sampling rates generate shorter audios\n",
+    "# 2 seconds\n",
     "IPythonAudio(audio_sample[\"audio\"][\"array\"],\n",
     "             rate=96000)"
    ]
